tests/compiler/expected/output/StringIntializaerListTypeError.shtk.txt
MODULE StringIntializaerListTypeError.shtk
ERROR in Line 5 Col 36

    var d: char[2][10] = ["hello", c]
                                   ^
Type error, did not expect ubyte[4], expected ubyte[6]

StringIntializaerListTypeError.shtk:5:35
